--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\admin\AppData\Local\Temp\testng-eclipse--163963514\testng-customsuite.xml</span>
+                    <span>C:\Users\admin\AppData\Local\Temp\testng-eclipse--1142647777\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">9 methods, 1 failed,   8 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,59 +103,10 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="docusign">docusign</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Esignseclink" class="method navigator-link" hash-for-method="securesign">securesign</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="addinvoice">addinvoice</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="createicon">createicon</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="emailtemp">emailtemp</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="esignpage">esignpage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="loginqountweb">loginqountweb</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="predoctemp">predoctemp</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="reminder">reminder</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="seltestng.Createsign" class="method navigator-link" hash-for-method="signers">signers</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -170,38 +121,18 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">seltestng.Createsign</span>
+              <span class="class-name">seltestng.Esignseclink</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="docusign">
-                  </a> <!-- docusign -->
-                  <span class="method-name">docusign</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//button[@class=&apos;olv-button olv-ignore-transform css-4es3us&apos;]&quot;}
-  (Session info: chrome=126.0.6478.63)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
-Build info: version: &apos;4.18.1&apos;, revision: &apos;b1d3319b48&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.2&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [5bf7976e5a628a98cdc256a782c16a21, findElement {value=//button[@class=&apos;olv-button olv-ignore-transform css-4es3us&apos;], using=xpath}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 126.0.6478.63, chrome: {chromedriverVersion: 126.0.6478.63 (df799988fdc9..., userDataDir: C:\Users\admin\AppData\Loca...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:52161}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:52161/devtoo..., se:cdpVersion: 126.0.6478.63, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 5bf7976e5a628a98cdc256a782c16a21
-	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
-	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)
-	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:190)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:519)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:356)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:350)
-	at seltestng.Createsign.docusign(Createsign.java:196)
+                  <a name="securesign">
+                  </a> <!-- securesign -->
+                  <span class="method-name">securesign</span>
+                  <div class="stack-trace">java.lang.IllegalArgumentException: Locator must be set
+	at org.openqa.selenium.internal.Require.nonNull(Require.java:60)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:348)
+	at seltestng.Esignseclink.securesign(Esignseclink.java:57)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
@@ -234,74 +165,10 @@ Session ID: 5bf7976e5a628a98cdc256a782c16a21
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">seltestng.Createsign</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="addinvoice">
-                  </a> <!-- addinvoice -->
-                  <span class="method-name">addinvoice</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createicon">
-                  </a> <!-- createicon -->
-                  <span class="method-name">createicon</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="emailtemp">
-                  </a> <!-- emailtemp -->
-                  <span class="method-name">emailtemp</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="esignpage">
-                  </a> <!-- esignpage -->
-                  <span class="method-name">esignpage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginqountweb">
-                  </a> <!-- loginqountweb -->
-                  <span class="method-name">loginqountweb</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="predoctemp">
-                  </a> <!-- predoctemp -->
-                  <span class="method-name">predoctemp</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="reminder">
-                  </a> <!-- reminder -->
-                  <span class="method-name">reminder</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="signers">
-                  </a> <!-- signers -->
-                  <span class="method-name">signers</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\admin\AppData\Local\Temp\testng-eclipse--163963514\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\admin\AppData\Local\Temp\testng-eclipse--1142647777\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -310,7 +177,7 @@ Session ID: 5bf7976e5a628a98cdc256a782c16a21
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;seltestng.Createsign&quot;/&gt;
+      &lt;class name=&quot;seltestng.Esignseclink&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -350,48 +217,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(9);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'docusign')
-data.setCell(0, 2, 'seltestng.Createsign')
-data.setCell(0, 3, 37421);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'emailtemp')
-data.setCell(1, 2, 'seltestng.Createsign')
-data.setCell(1, 3, 34691);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'signers')
-data.setCell(2, 2, 'seltestng.Createsign')
-data.setCell(2, 3, 17212);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginqountweb')
-data.setCell(3, 2, 'seltestng.Createsign')
-data.setCell(3, 3, 14650);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'addinvoice')
-data.setCell(4, 2, 'seltestng.Createsign')
-data.setCell(4, 3, 8829);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'predoctemp')
-data.setCell(5, 2, 'seltestng.Createsign')
-data.setCell(5, 3, 8333);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'esignpage')
-data.setCell(6, 2, 'seltestng.Createsign')
-data.setCell(6, 3, 6182);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'createicon')
-data.setCell(7, 2, 'seltestng.Createsign')
-data.setCell(7, 3, 4334);
-data.setCell(8, 0, 8)
-data.setCell(8, 1, 'reminder')
-data.setCell(8, 2, 'seltestng.Createsign')
-data.setCell(8, 3, 3176);
+data.setCell(0, 1, 'securesign')
+data.setCell(0, 2, 'seltestng.Esignseclink')
+data.setCell(0, 3, 70683);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -417,44 +252,12 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">seltestng.Createsign</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">loginqountweb</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">esignpage</span>
-                <span class="method-start">14655 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">createicon</span>
-                <span class="method-start">20837 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">signers</span>
-                <span class="method-start">25171 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">reminder</span>
-                <span class="method-start">42383 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addinvoice</span>
-                <span class="method-start">45559 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">predoctemp</span>
-                <span class="method-start">54388 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">emailtemp</span>
-                <span class="method-start">62721 ms</span>
-              </div> <!-- test-method -->
+              <div class="chronological-class-name">seltestng.Esignseclink</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">docusign</span>
-                <span class="method-start">97418 ms</span>
+                <span class="method-name">securesign</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
